added basic html elements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
     <title>Calculator</title>
 </head>
 <body>
+    <header></header>
+    
+    <main>
+        <div class="calcBody">
+            <div class="screen">
+
+            </div>
+            <div class="numbers">
+                <button>0</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+            </div>
+            <div class="operators">
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
+            </div>
+            <div class="editBtns">
+                <button>Clear</button>
+                <button>=</button>
+            </div>
+        </div>
+    </main>
+
+    <footer></footer>
+
     <script src="script.js"></script>
     
 </body>
