improved the design

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <button class="keyBtn numpad">7</button>
                 <button class="keyBtn numpad">8</button>
                 <button class="keyBtn numpad">9</button>
-                <button class="keyBtn edit">+</button>
+                <button class="keyBtn edit op">+</button>
                 <button class="keyBtn numpad">4</button>
                 <button class="keyBtn numpad">5</button>
                 <button class="keyBtn numpad">6</button>
-                <button class="keyBtn edit">-</button>
+                <button class="keyBtn edit op">-</button>
                 <button class="keyBtn numpad">1</button>
                 <button class="keyBtn numpad">2</button>
                 <button class="keyBtn numpad">3</button>
-                <button class="keyBtn edit">*</button>
-                <button class="keyBtn edit">.</button>
+                <button class="keyBtn edit op">*</button>
+                <button class="keyBtn edit ed">.</button>
                 <button class="keyBtn numpad">0</button>
-                <button class="keyBtn edit">=</button>
-                <button class="keyBtn edit">÷</button>
+                <button class="keyBtn edit ed">=</button>
+                <button class="keyBtn edit op">÷</button>
             </div>
         </div>
     </main>
