--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/12c29c871e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
-    <title>Calculator</title>
+    <title >Calculator</title>
 </head>
 <body>
     <header></header>
@@ -16,31 +16,31 @@
         <div class="calcBody">
             <div class="screen">
                 <div class="topScreen">
-                    <p class="topP">123456789</p>
+                    <p class="topP">0</p>
                 </div>
                 <div class="downScreen">
-                    <p class="downP">123456789</p>
+                    <p class="downP">0</p>
                 </div>
             </div>
             <div class="keyboard">
-                <button class="clearBtn">CLEAR</button>
-                <button class="backBtn"><i class="fas fa-backspace"></i></button>
-                <button class="keyBtn numpad">7</button>
-                <button class="keyBtn numpad">8</button>
-                <button class="keyBtn numpad">9</button>
-                <button class="keyBtn edit op">+</button>
-                <button class="keyBtn numpad">4</button>
-                <button class="keyBtn numpad">5</button>
-                <button class="keyBtn numpad">6</button>
-                <button class="keyBtn edit op">-</button>
-                <button class="keyBtn numpad">1</button>
-                <button class="keyBtn numpad">2</button>
-                <button class="keyBtn numpad">3</button>
-                <button class="keyBtn edit op">*</button>
-                <button class="keyBtn edit ed">.</button>
-                <button class="keyBtn numpad">0</button>
-                <button class="keyBtn edit ed">=</button>
-                <button class="keyBtn edit op">÷</button>
+                <button class="clearBtn" value="clear">CLEAR</button>
+                <button class="backBtn" value="back"><i class="fas fa-backspace"></i></button>
+                <button class="keyBtn numpad" value="7">7</button>
+                <button class="keyBtn numpad" value="8">8</button>
+                <button class="keyBtn numpad" value="9">9</button>
+                <button class="keyBtn edit op" value="+">+</button>
+                <button class="keyBtn numpad" value="4">4</button>
+                <button class="keyBtn numpad" value="5">5</button>
+                <button class="keyBtn numpad" value="6">6</button>
+                <button class="keyBtn edit op" value="-">-</button>
+                <button class="keyBtn numpad" value="1">1</button>
+                <button class="keyBtn numpad" value="2">2</button>
+                <button class="keyBtn numpad" value="3">3</button>
+                <button class="keyBtn edit op" value="*">*</button>
+                <button class="keyBtn edit ed" value=".">.</button>
+                <button class="keyBtn numpad" value="0">0</button>
+                <button class="keyBtn edit ed" value="=">=</button>
+                <button class="keyBtn edit op" value="/">÷</button>
             </div>
         </div>
     </main>
