fixed top display

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main>
         <div class="calcBody">
             <div class="screen">
+                <div class="topScreen"></div>
                 <div class="downScreen"></div>
             </div>
             <div class="keyboard">
